Initial Commit to support https://github.com/salesforce/dockerfile-image-update/issues/236